Починил парсер для Get_device

--- a/ParkeonService/app/src/main/res/layout/activity_main.xml
+++ b/ParkeonService/app/src/main/res/layout/activity_main.xml
@@ -93,7 +93,7 @@
         android:background="@android:drawable/progress_horizontal"
         android:onClick="onAdvSearch"
         android:padding="10dp"
-        android:text="Advanced Search"
+        android:text="Go Map"
         android:textAlignment="center"
         tools:ignore="TextViewEdits"
         android:layout_x="230dp"
@@ -114,7 +114,7 @@
         android:paddingRight="3dp"
         android:paddingStart="3dp"
         android:paddingTop="3dp"
-        android:text="Show on Map"
+        android:text="Go Map"
         android:layout_x="230dp"
         android:layout_y="370dp"
         android:layout_weight="1"
