--- a/ParkeonService/app/src/main/res/layout/popup__confirm_new_device.xml
+++ b/ParkeonService/app/src/main/res/layout/popup__confirm_new_device.xml
@@ -38,14 +38,14 @@
         android:layout_alignBottom="@+id/textView2"
         android:layout_toEndOf="@+id/textView2"
         android:maxLength="8"
-        android:textColor="?attr/colorControlHighlight" />
+        android:textColor="?android:attr/colorBackground" />
 
     <Button
         android:text="Ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnOk"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="46dp"
         android:layout_below="@+id/etMachineName"
         android:layout_centerHorizontal="true" />
 
