--- a/ParkeonService/app/src/release/res/values/google_maps_api.xml
+++ b/ParkeonService/app/src/release/res/values/google_maps_api.xml
@@ -17,6 +17,6 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        YOUR_KEY_HERE
+        AIzaSyD_9fsfUr-h8-cwX1aaofvVYgmf3dBTQBI
     </string>
 </resources>
