--- a/ParkeonService/app/src/main/res/layout/popup__confirm_new_device.xml
+++ b/ParkeonService/app/src/main/res/layout/popup__confirm_new_device.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@color/wallet_dim_foreground_inverse_holo_dark">
+    android:background="@color/common_google_signin_btn_text_dark_default">
 
     <TextView
         android:text="Confirm creating new Device "
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textStyle="normal|bold"
-        android:textColor="@color/wallet_bright_foreground_holo_dark" />
+        android:textColor="@color/colorPrimaryDark" />
 
     <TextView
         android:text="Name: "
