--- a/ParkeonService/app/src/main/res/layout/activity_main.xml
+++ b/ParkeonService/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
     <EditText
         android:id="@+id/etSearchDeviceName"
         android:ems="10"
-        android:hint="Type device name here..."
+        android:hint="@string/strHintSearchDevice"
         android:layout_x="10dp"
         android:layout_y="40dp"
         android:layout_width="200dp"
@@ -33,7 +33,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
-        android:text="Search device:"
+        android:text="@string/strSearchDevice"
         android:textColor="@android:color/background_dark"
         android:textSize="20sp"
         android:textStyle="normal|bold"
@@ -52,7 +52,7 @@
             android:id="@+id/a"
             android:layout_width="match_parent"
             android:layout_height="42dp"
-            android:text="Show all devices"
+            android:text="@string/strShowAllDevices"
             android:layout_x="10dp"
             android:layout_y="257dp"
             android:layout_weight="1" />
@@ -61,7 +61,7 @@
             android:id="@+id/b"
             android:layout_width="match_parent"
             android:layout_height="42dp"
-            android:text="Show Activated devices"
+            android:text="@string/strShowActivatedDevices"
             android:layout_x="10dp"
             android:layout_y="167dp"
             android:layout_weight="1" />
@@ -70,7 +70,7 @@
             android:id="@+id/c"
             android:layout_width="match_parent"
             android:layout_height="42dp"
-            android:text="Show non-Activated devices"
+            android:text="@string/strShowNonActivatedDevices"
             android:layout_x="10dp"
             android:layout_y="152dp"
             android:checked="false" />
@@ -82,7 +82,7 @@
         android:layout_width="100dp"
         android:background="@android:drawable/progress_horizontal"
         android:onClick="onVeiwDetailed"
-        android:text="View detailed"
+        android:text="@string/strViewDetailed"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
         tools:ignore="TextViewEdits"
         android:layout_x="230dp"
@@ -96,7 +96,7 @@
         android:background="@android:drawable/progress_horizontal"
         android:onClick="onAdvSearch"
         android:padding="10dp"
-        android:text="Go Map"
+        android:text="@string/strGoMap"
         android:textAlignment="center"
         tools:ignore="TextViewEdits"
         android:layout_x="230dp"
@@ -117,7 +117,7 @@
         android:paddingRight="3dp"
         android:paddingStart="3dp"
         android:paddingTop="3dp"
-        android:text="Go Map"
+        android:text="@string/strGoMap"
         android:layout_x="230dp"
         android:layout_y="370dp"
         android:layout_weight="1"
